roles/kubernetes-microservices-deploy/files/deployment/apiserver/apiserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiserver
  namespace: default
  labels:
    k8s-app: apiserver
spec:
  replicas: 0
  selector:
    matchLabels:
      k8s-app: nodeapapiserveriserver
  template:
    metadata:
      name: nodeapisapiservererver
      labels:
        k8s-app: apiserver
    spec:
      containers:
      - name: apiserver
        image: ghcr.io/dekeyrej/apiserver:latest
        imagePullPolicy: Always
        resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
        # envFrom:
        #   - configMapRef:
        #       name: common-config
      imagePullSecrets:
        - name: ghcr-login-secret
