roles/kubernetes-microservices-deploy/files/deployment/apiserver/apiserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apiserver-service
  namespace: default
spec:
  clusterIP: None
  ports:
  - port: 3002
    targetPort: 3002
    name: apiserver
  selector:
    k8s-app: apiserver
